# Discifi

./: .dockerignore  .env.example  .gitignore  Anchor.toml  App.tsx  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  Dockerfile  README.md  app.json  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/backend/: .env.example  jest.config.ts  package.json  tsconfig.json
apps/mobile/: package.json
docker/: docker-compose.yml
programs/discifi_sentinel/: Cargo.toml
programs/discifi_sentinel/src/: lib.rs
programs/sentinel-approvals/: Cargo.toml
programs/sentinel-approvals/src/: lib.rs
programs/sentinel-inheritance/: Cargo.toml
programs/sentinel-multisig/: Cargo.toml
programs/sentinel-rules/: Cargo.toml
programs/sentinel-stealth/: Cargo.toml
programs/sentinel-wallet/: Cargo.toml  Xargo.toml
programs/sentinel-wallet/src/: lib.rs
src/components/: AccentCard.tsx  AnimatedNumber.tsx  CutCornerCard.tsx  EKGBar.tsx  FloatingPill.tsx  Glyph.tsx  GoldToggle.tsx  Icons.tsx  MnemonicInput.tsx  PulseRing.tsx  RadialGauge.tsx  SecureMnemonicDisplay.tsx  StepIndicator.tsx  TerminalLoader.tsx  useScreenCaptureProtection.ts
src/crypto/: WalletManager.ts  address.ts  bip39.ts  entropy.ts  hardwareCard.ts  slip10.ts  types.ts
src/navigation/: AppNavigator.tsx
src/screens/: ActivityScreen.tsx  BrowserScreen.tsx  DashboardScreen.tsx  GenerateWalletScreen.tsx  OnboardingScreen.tsx  ReceiveScreen.tsx  RestoreWalletScreen.tsx  RulesScreen.tsx  SendScreen.tsx  SettingsScreen.tsx  SwapScreen.tsx  TokenDetailScreen.tsx  TransactionGateScreen.tsx  VaultScreen.tsx
src/services/: NetworkContext.tsx  constants.ts  sendService.ts  useWalletData.ts  (+1 more)
tests/: discifi_sentinel.ts  tsconfig.json
(+82 files in other folders)
