[package]
name = "discifi_sentinel"
version = "0.1.0"
description = "DisciFi Sentinel - programmable spending rules enforced on-chain"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
