[package]
name = "sentinel-inheritance"
version = "1.0.0"
description = "Dead-man's switch inheritance for DisciFi Sentinel"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
solana-program = "~1.18.0"
